# tamhome_pointing_estimation

./: CMakeLists.txt  README.md  package.xml
config/json/: arena.json  furniture.json
config/map/: map.pgm  map.yaml
config/rviz/: calculate_pointing_position_for_test.rviz  rviz.rviz
launch/: calculate_pointing_position.launch  calculate_pointing_position_for_test.launch  env_marker.launch  focus_person.launch  focus_person_test.launch  map_server_for_get_env_position.launch  pointing_estimation.launch
rviz/: load_world_model.rviz  test_env_marker.rviz
script/: .gitignore  calculate_pointing_position_node_ring_buffer.py  env_marker_node.py  focus_person.py  focus_person_node.py  pointing_estimation.py  visualize_clicked_point_node.py
